Data/Practice_1/test.txt
  File "/Users/siavashmortezavi/github_repos/2017-msan694-example/Data/Practice_1/hw2.py", line 18
    print Evens_sorted.histogram(hist_size)
                     ^
SyntaxError: invalid syntax
